# cuda_fir

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  fir.sublime-workspace
scripts/: generateExampleData.py  get_cuda_sm.sh  samples.py  testout.py
src/: CMakeLists.txt  cmix.cu  cmix.h  cuda_error.h  cuda_fir.cu  cuda_fir.h  fir.cpp  fir.h  main.cpp
